# network_flow_solver

./: .gitignore  =0.58.0  AGENTS.md  BENCHMARK_SUITE_PLAN_EXECUTION_SUMMARY.md  CACHE_OPTIMIZATION_RESULTS.md  CHANGELOG.md  GITHUB_SETUP.md  INSTALL.md  ISSUE_TEMPLATE_phase1_incomplete.md  Makefile  OPTIMIZATION_PROJECTS_2025.md  OPTIMIZATION_ROADMAP.md  PERFORMANCE_OPTIMIZATION_STRATEGY.md  PHASE3_OPTIMIZATION_RESULTS.md  PHASE3_PROFILING_ANALYSIS.md  PHASE4_DEGENERACY_INVESTIGATION.md  PHASE5_ENHANCEMENTS.md  PHASE6_SUMMARY.md  PROFILING_RESULTS.md  PROJECT_SUMMARY.md  README.md  REVIEW.md  SOLVER_COMPARISON_FINDINGS.md  TUTORIAL.md  WEEK2_CACHE_IMPLEMENTATION.md  benchmark_phase7_validation.py  benchmark_vectorize_residuals.py  benchmark_vectorized_pricing.py  experiment_measure_degeneracy.py  experiment_measure_degeneracy_simple.py  experiment_rebuild_frequency.py  experiment_rebuild_frequency_simple.py  mypy.ini  profile.stats  profile_memory.py  profile_memory_dense.py  profile_memory_peak.py  profile_memory_psutil.py  profile_memory_warmed.py  profile_solver.py  (+11 more)
.github/: ISSUE_WARM_START_EDGE_CASE.md
.github/workflows/: README.md  ci.yml  dependency-review.yml  release.yml
benchmarks/: BENCHMARKING.md  DOWNLOADING.md  KNOWN_ISSUES.md  README.md  benchmark_batch_devex.py  benchmark_cumulative_speedup.py  benchmark_jit_compilation.py
benchmarks/docs/: DEGENERACY_ANALYSIS.md  OPTIMIZATION_RESULTS.md  SOLVER_COMPARISON_FINDINGS.md
benchmarks/metadata/: known_solutions.json  licenses.json  problem_catalog.json
benchmarks/parsers/: __init__.py  dimacs.py
benchmarks/results/: README.md  after-iteration-fix.json  baseline-issues.json  cache_benchmark_results.txt  cumulative_speedup_results.txt  jit_compilation_results.txt
benchmarks/scripts/: __init__.py  compare_configurations.py  diagnose_goto.py  download_dimacs.py  run_benchmark.py  solver_comparison.py
benchmarks/solvers/: __init__.py  base.py  lemon_adapter.py  network_solver_adapter.py  networkx_adapter.py  ortools_adapter.py  pulp_adapter.py
docs/: SOLVER_COMPARISON.md  TUTORIAL.md  algorithm.md  api.md  benchmarks.md  examples.md  troubleshooting.md
docs/benchmarks/: BENCHMARK_SOURCES.md
docs/project_plans/: BENCHMARK_SUITE_PLAN.md  BENCHMARK_SUITE_PLAN_EXECUTION_SUMMARY.md  CUMULATIVE_SPEEDUP_ANALYSIS.md  FUTURE_ARCHITECTURAL_REFACTOR.md  GETTING_TO_50X_PHASE_5_SUMMARY.md  GETTING_TO_50X_PHASE_7_SUMMARY.md  PHASE6_COMPLETE.md  (+14 more)
examples/: adaptive_refactorization_example.py  automatic_scaling_example.py  dimacs_small_problem.json  dimacs_small_solution.json  incremental_resolving_example.py  large_transport_problem.json  large_transport_solution.json  networkx_comparison_example.py  numeric_validation_example.py  performance_profiling_example.py  preprocessing_example.py  progress_logging_example.py  sample_problem.json  sample_solution.json  sensitivity_analysis_example.py  solve_dimacs_example.py  solve_example.py  solve_large_transport.py  solve_textbook_transport.py  solver_options_example.py  sparse_vs_dense_example.py  textbook_transport_problem.json  textbook_transport_solution.json  undirected_graph_example.py  utils_example.py  visualization_example.py  warm_start_example.py
scripts/: analyze_cache_overhead.py  analyze_projection_patterns.py  benchmark_projection_cache.py  profile_performance.py  profile_quick_test.py  test_copy_impact.py
tests/: test_large_directed.py  test_property_min_cost_flow.py
tutorials/: create_tutorial.py  network_flow_tutorial.ipynb  visualization_tutorial.ipynb
(+64 files in other folders)
